Demo_Apps/istio_autoheal_demo/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: golden-signal
spec:
  host: golden-signal
  subsets:
    - name: v1
      labels:
        version: v1
